<resources>
    <string name="app_name">EuVou</string>
    <string name="titulo_login">Login</string>
    <string name="titulo_register">Cadastrar-se</string>
    <string name="txt_apresenta_login">Seja bem vindo(a)!</string>
    <string name="txt_apresenta_cadastro">Muito prazer!</string>
    <string name="txt_welcome_login">É um prazer te ver aqui! A EuVouNaTrip lhe deseja as melhores experiências!</string>
    <string name="txt_aprentacao_cadasto">Estamos muito felizes em te ver por aqui! A EuVouNaTrip é a escolha certa para pessoas como você.</string>
    <string name="hint_nome">Nome</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_senha">Senha</string>
    <string name="hint_confirma_senha">Confirme sua senha</string>
    <string name="forgot_your_password">Esqueceu sua senha?</string>
    <string name="txt_button_entrar">Entrar</string>
    <string name="txt_button_navega_cadastro">Cadastre-se aqui</string>
</resources>