<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context=".Register_Screen">

    <View
        android:id="@+id/bodyCadastro"
        android:layout_width="match_parent"
        android:layout_height="580dp"
        android:background="@drawable/background_body"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/txtMuitoPrazer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:text="@string/txt_apresenta_cadastro"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/bodyCadastro"
        app:layout_constraintStart_toStartOf="@+id/bodyCadastro"
        app:layout_constraintTop_toTopOf="@+id/bodyCadastro" />

    <TextView
        android:id="@+id/txtApresentacao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:text="@string/txt_aprentacao_cadasto"
        app:layout_constraintTop_toBottomOf="@id/txtMuitoPrazer" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@id/txtApresentacao">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_editext"
            android:drawableEnd="@drawable/ic_name"
            android:hint="@string/hint_nome"
            android:inputType="text"
            android:maxLines="1"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutEmailCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutName">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_editext"
            android:drawableEnd="@drawable/ic_email"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/txtInputLayoutPasswordCadastro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintTop_toBottomOf="@+id/txtInputLayoutEmailCadastro"
        app:passwordToggleEnabled="true">


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/txtEditPasswordCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/background_editext"
            android:hint="@string/hint_senha"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>


</androidx.constraintlayout.widget.ConstraintLayout>